fixed flicker on safari

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,7 +15,7 @@
 main {
   display: flex;
   flex-direction: column;
-  z-index: 1;
+  // z-index: 0;
   overflow: hidden;
   font-style: normal;
   font-weight: 400;
